side links Ve's

--- a/src/html/project.html
+++ b/src/html/project.html
@@ -40,7 +40,7 @@
                         <a href="virtual-exhibits/ve3.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_04.jpg"
-                                class="absolute h-full w-full object-cover hover:cursor-[url(/public/images/75.jpg),_pointer]"
+                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/75.jpg),_pointer]"
                             />
                         </a>
                     </div>
@@ -89,7 +89,7 @@
                         <a href="virtual-exhibits/ve3.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_03.jpg"
-                                class="absolute h-full w-full object-cover hover:cursor-[url(/public/images/75.jpg),_pointer]"
+                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/75.jpg),_pointer]"
                             />
                         </a>
                     </div>
