--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -9,133 +9,148 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "yes"}'></include>
         </header>
 
-        <main class="m-auto flex flex-col font-crimson-text text-lg font-bold">
-            <div class="flex h-[40rem]">
-                <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
-                    <span class="pr-20 text-left">
-                        Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der
-                        Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit den Ausländern.
-                    </span>
+        <div class="relative">
+            <!-- Hover links -->
+            <div class="absolute h-full w-full">
+                <a
+                    class="absolute left-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    href="#"
+                ></a>
 
-                    <!-- Audio -->
-                    <div class="mx-auto mt-4 flex w-1/3 justify-center rounded-sm bg-gray-900 px-2 py-8">
-                        <include
-                            src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
-                        ></include>
-                    </div>
-                </div>
-                <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
-                    <!-- Plattenbauten Hoch -->
-                    <div class="relative h-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
-                    </div>
-                    <!-- Plattenbauten mittelhoch -->
-                    <div class="relative h-full overflow-hidden rounded-sm pt-2">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
-                    </div>
-                </div>
+                <a
+                    class="absolute right-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    href="./ve3.html"
+                ></a>
             </div>
 
-            <div class="mt-12 flex h-[60rem]">
-                <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
-                    <!-- Hausecke; türkise Fenster -->
-                    <div class="relative mr-12 h-3/4 overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
-                    </div>
+            <main class="m-auto flex flex-col font-crimson-text text-lg font-bold">
+                <div class="flex h-[40rem]">
+                    <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
+                        <span class="pr-20 text-left">
+                            Es wirkt so, als ob die DDR nur Show gemacht hätte mit dem Thema Solidarität. Wir sind so erzogen worden in der
+                            Schule, aber wenn du es im Nachhinein betrachtest, war überhaupt gar kein Kontakt gewollt mit den Ausländern.
+                        </span>
 
-                    <!-- Audio "Die kannten keine Schwarzen" -->
-                    <div class="mb-20 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
-                        <include
-                            src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": ""}'
-                        >
-                        </include>
+                        <!-- Audio -->
+                        <div class="mx-auto mt-4 flex w-1/3 justify-center rounded-sm bg-gray-900 px-2 py-8">
+                            <include
+                                src="./partials/interv_audio.html"
+                                locals='{"audioFilePath": "../../../public/audio/01_J_R_01.mp3", "title": ""}'
+                            ></include>
+                        </div>
                     </div>
-                </div>
-                <div class="flex basis-1/2 flex-col justify-end pl-1">
-                    <!-- Feuerzeug -->
-                    <div class="relative ml-8 mt-24 h-3/4 overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
-                    </div>
-                </div>
-            </div>
-
-            <div class="flex h-[60rem] pt-14">
-                <div class="basis-2/3 pb-24 pr-8">
-                    <!-- Nahaufnahme Interviewpartner -->
-                    <div class="relative h-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
-                    </div>
-                </div>
-                <div class="mt-auto basis-1/3">
-                    <!-- Text "Damals in der DDR hat man.."  -->
-                    <span>
-                        Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
-                        Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“, oder: „Es kommt die Kohle“.
-                        Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir wollten lernen und
-                        arbeiten
-                    </span>
-                </div>
-            </div>
-
-            <div class="flex h-[40rem] pt-24">
-                <div class="flex w-full flex-col justify-between">
-                    <!-- Schwimmbad -->
-                    <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
-                    </div>
-
-                    <!-- Audio unterhalb v. Schwimmbad -->
-                    <div class="-mb-16 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
-                        <include
-                            src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'
-                        >
-                        </include>
+                    <div class="ml-1 mr-4 flex min-h-min basis-1/2 flex-col">
+                        <!-- Plattenbauten Hoch -->
+                        <div class="relative h-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_06.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
+                        <!-- Plattenbauten mittelhoch -->
+                        <div class="relative h-full overflow-hidden rounded-sm pt-2">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_07.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
                     </div>
                 </div>
 
-                <div class="z-10 -mx-32 w-full pt-44">
-                    <!-- Audio zw. Schwimmbad & Datsche -->
-                    <div class="flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
-                        <include
-                            src="./partials/interv_audio.html"
-                            locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
-                        >
-                        </include>
+                <div class="mt-12 flex h-[60rem]">
+                    <div class="-mt-20 flex basis-1/2 flex-col justify-between pr-1">
+                        <!-- Hausecke; türkise Fenster -->
+                        <div class="relative mr-12 h-3/4 overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_08.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
+
+                        <!-- Audio "Die kannten keine Schwarzen" -->
+                        <div class="mb-20 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                            <include
+                                src="./partials/interv_audio.html"
+                                locals='{"audioFilePath": "../../../public/audio/02_die_kannten_keine_Schwarzen.mp3", "title": ""}'
+                            >
+                            </include>
+                        </div>
+                    </div>
+                    <div class="flex basis-1/2 flex-col justify-end pl-1">
+                        <!-- Feuerzeug -->
+                        <div class="relative ml-8 mt-24 h-3/4 overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_09.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
                     </div>
                 </div>
 
-                <div class="w-full pt-32">
-                    <!-- Datsche -->
-                    <div class="relative h-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
+                <div class="flex h-[60rem] pt-14">
+                    <div class="basis-2/3 pb-24 pr-8">
+                        <!-- Nahaufnahme Interviewpartner -->
+                        <div class="relative h-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_010.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
+                    </div>
+                    <div class="mt-auto basis-1/3">
+                        <!-- Text "Damals in der DDR hat man.."  -->
+                        <span>
+                            Damals in der DDR hat man gesagt, es gäbe keine Rassendiskriminierung. Aber für uns gab es die. Wenn wir in die
+                            Gaststätte gekommen sind, haben die Leute gesagt: “Mensch, jetzt wird es dunkel hier“, oder: „Es kommt die
+                            Kohle“. Und dann haben wir gemerkt, es geht um unserer [Haut]Farbe. Aber wir konnten nichts machen, wir wollten
+                            lernen und arbeiten
+                        </span>
                     </div>
                 </div>
-            </div>
 
-            <div class="relative mt-36 flex h-[60rem] w-full">
-                <div class="flex w-3/5 flex-col justify-between">
-                    <!-- Baum -->
-                    <div class="relative mt-44 h-full w-full overflow-hidden rounded-sm">
-                        <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
+                <div class="flex h-[40rem] pt-24">
+                    <div class="flex w-full flex-col justify-between">
+                        <!-- Schwimmbad -->
+                        <div class="relative -mt-12 h-full w-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_011.jpg" class="absolute object-cover" />
+                        </div>
+
+                        <!-- Audio unterhalb v. Schwimmbad -->
+                        <div class="-mb-16 flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                            <include
+                                src="./partials/interv_audio.html"
+                                locals='{"audioFilePath": "../../../public/audio/04_ein_freundschaftliches_verhältnis.mp3", "title": "ein freundschatliches Verhältnis"}'
+                            >
+                            </include>
+                        </div>
+                    </div>
+
+                    <div class="z-10 -mx-32 w-full pt-44">
+                        <!-- Audio zw. Schwimmbad & Datsche -->
+                        <div class="flex w-full justify-center rounded-sm bg-gray-900 px-2 py-8">
+                            <include
+                                src="./partials/interv_audio.html"
+                                locals='{"audioFilePath": "../../../public/audio/03_du_hattest_gar_nicht_die_möglichkeit.mp3", "title": "du hattest gar nicht die Möglichkeit"}'
+                            >
+                            </include>
+                        </div>
+                    </div>
+
+                    <div class="w-full pt-32">
+                        <!-- Datsche -->
+                        <div class="relative h-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_012.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
                     </div>
                 </div>
 
-                <div class="flex w-2/5 flex-col items-start justify-start pl-4">
-                    <div>
-                        Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die sagen
-                        sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht gemocht“.
+                <div class="relative mt-36 flex h-[60rem] w-full">
+                    <div class="flex w-3/5 flex-col justify-between">
+                        <!-- Baum -->
+                        <div class="relative mt-44 h-full w-full overflow-hidden rounded-sm">
+                            <img src="/public/images/Zaninelli_Jacobs_BROTHERLAND_013.jpg" class="absolute h-full w-full object-cover" />
+                        </div>
                     </div>
-                    <div class="mt-4">„Warum?“</div>
-                    <div class="z-10 -ml-[33rem] text-center font-sans text-7xl text-red-600">WEIL DU SCHWARZ BIST</div>
-                    <div class="mt-4">Wir hatten Angst.</div>
-                    <div>Das war in Berlin 1982-1983.</div>
+
+                    <div class="flex w-2/5 flex-col items-start justify-start pl-4">
+                        <div>
+                            Keiner hat uns die Geschichte von Deutschland erzählt. Dann auf einmal kommt eine Gruppe von Jugendlichen, die
+                            sagen sie sind die Nachfolger von Hitler. „Wir repräsentieren Hitler und Hitler hat die Menschen wie euch nicht
+                            gemocht“.
+                        </div>
+                        <div class="mt-4">„Warum?“</div>
+                        <div class="z-10 -ml-[33rem] text-center font-sans text-7xl text-red-600">WEIL DU SCHWARZ BIST</div>
+                        <div class="mt-4">Wir hatten Angst.</div>
+                        <div>Das war in Berlin 1982-1983.</div>
+                    </div>
                 </div>
-            </div>
-            <br />
-            <a href="./ve3.html" alt="Virtual Exhibit 3">Next: Virtual Exhibit 3</a>
-        </main>
+                <br />
+            </main>
+        </div>
     </body>
 </html>
