--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -17,20 +17,22 @@
 
 
         <main class="m-auto">
+<div>OHH HAAAIII</div>
+
             <div id="simplelightboxgallery" class="gallery grid grid-cols-4 gap-4 xl:grid-cols-5 2xl:grid-cols-6">
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_01.jpg">
+                <a class="overflow-hidden rounded-sm" src="./public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_01.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_01.jpg" title="" class="w-full" />
                 </a>
                 <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_02.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_02.jpg" title="" class="w-full" />
                 </a>
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_03.jpg">
+                <a class="overflow-hidden rounded-sm" src="images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_03.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_03.jpg" title="" class="w-full" />
                 </a>
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_04.jpg">
+                <a class="overflow-hidden rounded-sm" src="public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_04.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_04.jpg" title="" class="w-full" />
                 </a>
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_05.jpg">
+                <a class="overflow-hidden rounded-sm" src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_05.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_05.jpg" title="" class="w-full" />
                 </a>
                 <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_06.jpg">
