--- a/src/html/exhibits.html
+++ b/src/html/exhibits.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="../css/simple-lightbox.css" />
         <include src="./partials/head.html" locals='{"pathHeadPrefix": "../", "pageTitle": "Brotherland - Book"}' />
     </head>
 
@@ -20,27 +19,27 @@
 <div>OHH HAAAIII</div>
 
             <div id="simplelightboxgallery" class="gallery grid grid-cols-4 gap-4 xl:grid-cols-5 2xl:grid-cols-6">
-                <a class="overflow-hidden rounded-sm" src="./public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_01.jpg">
+                <div class="overflow-hidden rounded-sm" gallerySrc="./public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_01.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_01.jpg" title="" class="w-full" />
-                </a>
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_02.jpg">
+                </div>
+                <div class="overflow-hidden rounded-sm" gallerySrc="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_02.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_02.jpg" title="" class="w-full" />
-                </a>
-                <a class="overflow-hidden rounded-sm" src="images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_03.jpg">
+                </div>
+                <div class="overflow-hidden rounded-sm" gallerySrc="images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_03.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_03.jpg" title="" class="w-full" />
-                </a>
-                <a class="overflow-hidden rounded-sm" src="public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_04.jpg">
+                </div>
+                <div class="overflow-hidden rounded-sm" gallerySrc="public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_04.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_04.jpg" title="" class="w-full" />
-                </a>
-                <a class="overflow-hidden rounded-sm" src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_05.jpg">
+                </div>
+                <div class="overflow-hidden rounded-sm" gallerySrc="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_05.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_05.jpg" title="" class="w-full" />
-                </a>
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_06.jpg">
+                </div>
+                <div class="overflow-hidden rounded-sm" gallerySrc="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_06.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_06.jpg" title="" class="w-full" />
-                </a>
-                <a class="overflow-hidden rounded-sm" src="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_07.jpg">
+                </div>
+                <div class="overflow-hidden rounded-sm" gallerySrc="./images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_07.jpg">
                     <img src="/public/images/exhibits/Zaninelli_Jacobs_BROTHERLAND_exhibition_07.jpg" title="" class="w-full" />
-                </a>
+                </div>
             </div>
         </main>
     </body>
